@@ -53,6 +53,9 @@ dependencies {
     compile 'org.apache.solr:solr-solrj:5.2.1'
     compile 'org.json:json:20141113'
 
+    compile 'org.javafp:parsecj:0.2'
+    compile 'org.apache.solr:solr-noggit:3.5.0'
+
     compile 'co.paralleluniverse:quasar-core:0.7.2:jdk8'
     compile 'co.paralleluniverse:quasar-actors:0.7.2'
     compile 'co.paralleluniverse:quasar-reactive-streams:0.7.2'
@@ -149,5 +152,32 @@ task writeClasspath(dependsOn: build) << {
     }
     new File(buildDir.absolutePath + "/quasar-core.path").withWriter {
         out -> out.writeLine(configurations.quasar.asPath);
+    }
+}
+
+test {
+    // enable TestNG support (default is JUnit)
+    useJUnit()
+
+    testSrcDirs = ['src/test/java']
+
+    // show standard out and standard error of the test JVM(s) on the console
+    testLogging.showStandardStreams = true
+
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+
+    // set JVM arguments for the test JVM(s)
+    jvmArgs '-XX:MaxPermSize=256m'
+
+    // listen to events in the test execution lifecycle
+    beforeTest { descriptor ->
+        logger.lifecycle("Running test: " + descriptor)
+    }
+
+    // listen to standard out and standard error of the test JVM(s)
+    onOutput { descriptor, event ->
+        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
     }
 }
